@@ -20,7 +20,6 @@ import jdplus.toolkit.base.api.processing.ProcQuality;
 import jdplus.toolkit.base.api.stats.StatisticalTest;
 import jdplus.toolkit.base.api.timeseries.TsData;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import jdplus.toolkit.base.api.processing.Diagnostics;
 
@@ -115,7 +114,7 @@ public class ResidualTradingDaysDiagnostics implements Diagnostics {
 
     @Override
     public List<String> getWarnings() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     private ProcQuality quality(StatisticalTest test) {
