@@ -16,14 +16,11 @@
  */
 package jdplus.sa.base.core.diagnostics;
 
-import jdplus.toolkit.base.api.information.Explorable;
 import jdplus.toolkit.base.api.processing.Diagnostics;
 import jdplus.toolkit.base.api.processing.ProcQuality;
-import jdplus.sa.base.api.SaDictionaries;
 import jdplus.toolkit.base.api.timeseries.TimeSelector;
 import jdplus.toolkit.base.api.timeseries.TsData;
-import jdplus.toolkit.base.api.dictionaries.Dictionary;
-import java.util.Collections;
+
 import java.util.List;
 import jdplus.sa.base.api.DecompositionMode;
 import jdplus.toolkit.base.core.modelling.regular.tests.SpectralAnalysis;
@@ -173,9 +170,9 @@ public class SpectralDiagnostics implements Diagnostics {
     @Override
     public List<String> getWarnings() {
         if (!sorig) {
-            return Collections.singletonList("No seasonal peak in the original differenced series");
+            return List.of("No seasonal peak in the original differenced series");
         } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 }
