@@ -16,7 +16,6 @@
  */
 package jdplus.toolkit.base.api.processing;
 
-import java.util.Collections;
 import java.util.List;
 import nbbrd.design.Development;
 
@@ -93,7 +92,7 @@ public interface ProcessingLog {
     }
 
     default List<Information> all() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     default void push(String routine) {
@@ -208,7 +207,7 @@ class NotImplementedLog implements ProcessingLog {
         return false;
     }
 
-    private static final List<Information> ALL = Collections.singletonList(
+    private static final List<Information> ALL = List.of(
             new Information("Processing", null, "not implemented", InformationType.Error, null));
 
     @Override
