@@ -16,7 +16,6 @@
  */
 package jdplus.toolkit.base.api.processing;
 
-import java.util.Collections;
 import nbbrd.design.Development;
 import java.util.Map;
 import java.util.function.Function;
@@ -67,6 +66,6 @@ public interface ProcessorFactory<S extends ProcSpecification, I, R> {
      * preferred.
      */
     default Map<String, Class> getOutputDictionary(boolean compact) {
-        return Collections.emptyMap();
+        return Map.of();
     }
 }
