@@ -2,7 +2,7 @@ package jdplus.main.cli.design;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -10,6 +10,6 @@ public class GAVTest {
 
     @Test
     public void test() {
-        assertThat(GAV.haveSameVersion(Collections.emptyList())).isFalse();
+        assertThat(GAV.haveSameVersion(List.of())).isFalse();
     }
 }
