@@ -25,7 +25,6 @@ import java.awt.event.ActionListener;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyVetoException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import org.openide.util.Exceptions;
@@ -57,7 +56,7 @@ public class NationalCalendarPanel extends JPanel implements ExplorerManager.Pro
      */
     public NationalCalendarPanel() {
         this.calendarName = "";
-        this.holidays = Collections.emptyList();
+        this.holidays = List.of();
         this.meanCorrection = true;
 
         this.em = new ExplorerManager();
@@ -317,7 +316,7 @@ public class NationalCalendarPanel extends JPanel implements ExplorerManager.Pro
 
     public void setHolidays(List<Holiday> events) {
         List<Holiday> old = this.holidays;
-        this.holidays = events != null ? events : Collections.emptyList();
+        this.holidays = events != null ? events : List.of();
         firePropertyChange(SPECIAL_DAY_EVENTS_PROPERTY, old, this.holidays);
         if (! events.isEmpty()){
             try {
