@@ -40,7 +40,6 @@ import org.openide.util.NbBundle.Messages;
 import org.openide.util.actions.Presenter;
 
 import javax.swing.*;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -87,7 +86,7 @@ public class ImportX13Spec extends SingleNodeAction<Node> implements Presenter.P
     }
 
     private List<Importable> getImportables() {
-        return Collections.singletonList(new Importable() {
+        return List.of(new Importable() {
 
             @Override
             public String getDomain() {
